--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
@@ -8,6 +52,8 @@ body {
 h1 {
   text-align: center;
   color: #333;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 #listaUsuarios {
@@ -15,6 +61,7 @@ h1 {
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+    margin: 15px;
 }
 
 #listaUsuarios>li {
@@ -22,6 +69,8 @@ h1 {
     height: 150px;
     background-color: white;
     padding: 10px;
+    border: 1px solid #dfdfdf;
+    border-radius: 5px;
 }
 
 #listaUsuarios>li div {
@@ -48,4 +97,8 @@ ul {
 
 #listaUsuarios img {
     width: 100px;
+}
+
+strong {
+    font-weight: bold;
 }
